[package]
name = "prefetchkit"
version = "1.0.0"
authors = ["Thomas BAILLEUX <thomas@bailleux.me>"]
license = "WTFPL"
description = "A powerful command-line tool for analysing Microsoft Prefetch Files"
keywords = ["forensic", "prefetch", "command-line"]

[dependencies]
libprefetch = "0.1.1"
clap = "2.31.1"
ansi_term = "0.11.0"
chrono = "0.4.0"
